--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisdomstar94/react-api-again-request-scheduler",
-  "version": "0.0.1",
+  "version": "0.0.2-test.1",
   "private": false,
   "scripts": {
     "dev": "next dev -p 3330",
@@ -11,9 +11,6 @@
     "lint": "next lint"
   },
   "main": "index.ts",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
   "repository": "https://github.com/wisdomstar94/react-api-again-request-scheduler",
   "dependencies": {
     "@types/node": "20.4.2",
