--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": false,
   "scripts": {
     "dev": "next dev -p 3330",
-    "build": "node ./build.esbuild.js",
-    "build:tsc": "tsc --project ./tsconfig.package.json",
-    "build-next": "next build",
-    "start-next": "next start",
-    "lint": "next lint"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "pack:build": "node ./build.esbuild.js",
+    "pack:build:tsc": "tsc --project ./tsconfig.package.json"
   },
   "main": "index.ts",
   "repository": "https://github.com/wisdomstar94/react-api-again-request-scheduler",
