--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisdomstar94/react-api-again-request-scheduler",
-  "version": "0.0.2-test.1",
+  "version": "0.0.2-test.3",
   "private": false,
   "scripts": {
     "dev": "next dev -p 3330",
@@ -12,10 +12,16 @@
   },
   "main": "index.ts",
   "repository": "https://github.com/wisdomstar94/react-api-again-request-scheduler",
-  "dependencies": {
+  "peerDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@wisdomstar94/react-indexeddb-manager": "^0.0.3",
     "@wisdomstar94/react-promise-interval": "^0.0.1",
     "autoprefixer": "10.4.14",
@@ -24,18 +30,10 @@
     "luxon": "^3.3.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  },
-  "peerDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6",
     "@types/luxon": "^3.3.0",
     "esbuild": "^0.18.15",
     "esbuild-css-modules-plugin": "^2.7.1"
