--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisdomstar94/react-api-again-request-scheduler",
-  "version": "0.0.2-test.3",
+  "version": "0.0.2",
   "private": false,
   "scripts": {
     "dev": "next dev -p 3330",
