--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wisdomstar94/react-api-again-request-scheduler",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": false,
   "scripts": {
     "dev": "next dev -p 3330",
@@ -19,12 +19,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.0",
     "@types/node": "20.4.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@wisdomstar94/react-indexeddb-manager": "^0.0.6",
     "@wisdomstar94/react-promise-interval": "^0.0.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
+    "esbuild": "^0.18.15",
+    "esbuild-css-modules-plugin": "^2.7.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "luxon": "^3.3.0",
@@ -33,9 +37,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "@types/luxon": "^3.3.0",
-    "esbuild": "^0.18.15",
-    "esbuild-css-modules-plugin": "^2.7.1"
+    "typescript": "5.1.6"
   }
 }
