--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@wisdomstar94/react-api-again-request-scheduler",
-  "version": "0.0.4",
+  "version": "0.0.5",
+  "license": "MIT",
   "private": false,
   "scripts": {
     "dev": "next dev -p 3330",
